--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Burger Logger</title>
   <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="../../public/assets/js/script.js"></script>
 </head>
 <body>
   {{{ body }}}
