--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,27 @@
 <div>
     <img src="../public/assets/pics/krabbyPatty.png" alt="Generic burger picture" >
 </div>
+
+<div>
+    <div>
+    {{#each cats}}
+        {{#if sleepy}}
+            {{> cats/cat-block sleep=false}}
+        {{/if}}
+    {{/each}}
+    </div>
+    <div>
+
+    </div>
+</div>
+
+<h2>Eat a burger</h2>
+<form class="create-form">
+
+  <div class="form-group">
+    <label for="ca">Burger:</label>
+    <input type="text" id="ca" name="name">
+  </div>
+
+  <button type="submit">Add Burger</button>
+</form>
