--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,4 +1,4 @@
 <li>
 	{{burger_name}}
-	<button class="delete-burger" data-id="{{this.id}}">DEVOUR!</button>
+	<button class="delete-burger" data-id="{{this.id}}" data-devoured="{{this.devoured}}">DEVOUR!</button>
 </li>
