--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
     <div>
     {{#each burgers}}
       {{#if devoured}}
-        {{> burgers/burger-block devoured=false}}
+        {{>burger devoured=false}}
       {{/if}}
     {{/each}}
     </div>
