--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
   <title>Burger Logger</title>
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="../../public/assets/js/script.js"></script>
+  <link rel="stylesheet" href="../../public/assets/css/style.css">
 </head>
 <body>
   {{{ body }}}
