--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Burger Logger</title>
   <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="../../public/assets/js/script.js"></script>
-  <link rel="stylesheet" href="../../public/assets/css/style.css">
+  <script src="assets/js/burgers.js"></script>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   {{{ body }}}
