--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,13 +4,17 @@
 
 <div>
     <div>
+      <h2>Hungry??</h2>
     {{#each burgers}}
       {{#unless devoured}}
         {{>burgers/burger-block devoured=false}}
       {{/unless}}
     {{/each}}
     </div>
+    <br>
+    <br>
     <div>
+      <h2>Eaten</h2>
       <ol>
         {{#each burgers}}
           {{#if devoured}}
@@ -21,12 +25,12 @@
     </div>
 </div>
 
-<h2>Eat a burger</h2>
+<h2>Make a burger!!!</h2>
 <form class="create-form">
 
   <div class="form-group">
     <label for="ca">Burger:</label>
-    <input type="text" id="ca" name="burger_name">
+    <input type="text" id="ca" name="burger_name" class="burger_name">
   </div>
 
   <button type="submit">Add Burger</button>
